# SHAPoint_webapp

./: LICENSE  MANIFEST.in  NOTICE  README.md  pyproject.toml  quick_start.md  run_app.bat  run_webapp.ps1  start_app.py
models/: base_params
shapoint_webapp/: __init__.py  app.py  cli.py  config.yaml  model_manager.py  visualizations.py
shapoint_webapp/models/: __init__.py  base_params
tests/: test_configuration.py  test_feature_rule_scoring.py  test_integration.py  test_model_manager.py  test_null_safety.py  test_trim_bins.py  test_visualizations.py
